--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="nom_joueur2">Nom joueur 2 </string>
     <string name="debut_partie">Débuter la partie </string>
     <string name="nouvelle_partie">Nouvelle partie </string>
+    <string name="nom_invalide">Nom invalide</string>
 </resources>
