ajout btn reset

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="debut_partie">Débuter la partie </string>
     <string name="nouvelle_partie">Nouvelle partie </string>
     <string name="nom_invalide">Nom invalide</string>
+    <string name="reset">Reset</string>
 </resources>
